--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>duan5</title>
-</head>
-<body>
-    <h2>Nhánh main</h2>
-</body>
+  </head>
+  <body>
+    <h2>Công việc 1</h2>
+  </body>
 </html>
